@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1990, 2007 The Regents of the University of California.
+ * Copyright (c) 1990 The Regents of the University of California.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms are permitted
@@ -35,17 +35,12 @@
  */
 
 _VOID
-_DEFUN(__smakebuf_r, (ptr, fp),
-       struct _reent *ptr _AND
+_DEFUN(__smakebuf, (fp),
        register FILE *fp)
 {
   register size_t size, couldbetty;
   register _PTR p;
-#ifdef __USE_INTERNAL_STAT64
-  struct stat64 st;
-#else
   struct stat st;
-#endif
 
   if (fp->_flags & __SNBF)
     {
@@ -54,9 +49,9 @@ _DEFUN(__smakebuf_r, (ptr, fp),
       return;
     }
 #ifdef __USE_INTERNAL_STAT64
-  if (fp->_file < 0 || _fstat64_r (ptr, fp->_file, &st) < 0)
+  if (fp->_file < 0 || _fstat64_r (_REENT, fp->_file, &st) < 0)
 #else
-  if (fp->_file < 0 || _fstat_r (ptr, fp->_file, &st) < 0)
+  if (fp->_file < 0 || _fstat_r (_REENT, fp->_file, &st) < 0)
 #endif
     {
       couldbetty = 0;
@@ -92,22 +87,19 @@ _DEFUN(__smakebuf_r, (ptr, fp),
       else
 	fp->_flags |= __SNPT;
     }
-  if ((p = _malloc_r (ptr, size)) == NULL)
+  if ((p = _malloc_r (_REENT, size)) == NULL)
     {
-      if (!(fp->_flags & __SSTR))
-	{
-	  fp->_flags |= __SNBF;
-	  fp->_bf._base = fp->_p = fp->_nbuf;
-	  fp->_bf._size = 1;
-	}
+      fp->_flags |= __SNBF;
+      fp->_bf._base = fp->_p = fp->_nbuf;
+      fp->_bf._size = 1;
     }
   else
     {
-      ptr->__cleanup = _cleanup_r;
+      _REENT->__cleanup = _cleanup_r;
       fp->_flags |= __SMBF;
       fp->_bf._base = fp->_p = (unsigned char *) p;
       fp->_bf._size = size;
-      if (couldbetty && _isatty_r (ptr, fp->_file))
+      if (couldbetty && isatty (fp->_file))
 	fp->_flags |= __SLBF;
     }
 }
